# fri_object_following

./: .gitignore  CMakeLists.txt  LICENSE  NOTES  README.md  package.xml  sources
src/: Person.cpp  Person.h  PersonClassifier.cpp  PersonClassifier.h  PersonDetector.cpp  PersonDetector.h  ShirtColorPersonClassifier.cpp  ShirtColorPersonClassifier.h  TrivialPersonClassifier.cpp  TrivialPersonClassifier.h  creeper.cpp  utils.h
